--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "dapp-demo1",
+  "name": "dapp-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ganache-cli": "^6.1.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "styled-components": "^3.4.9",
+    "svg-react-loader": "^0.4.5",
+    "truffle-contract": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "blockchain": "ganache-cli",
+    "compile": "truffle compile",
+    "console": "truffle console",
+    "migrate": "truffle migrate"
   },
   "eslintConfig": {
     "extends": "react-app"
