--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "solc": "^0.4.26",
     "styled-components": "^3.4.9",
     "svg-react-loader": "^0.4.5",
-    "truffle-contract": "^3.0.6"
+    "@truffle/contract": "^4.0.32"
   },
   "scripts": {
     "start": "react-scripts start",
